--- a/src/index.html
+++ b/src/index.html
@@ -97,6 +97,10 @@
     </div>
 </div>
 
+<script type="text/ng-template" id="about.tmpl">
+
+</script>
+
 <script type="text/ng-template" id="html.tmpl">
     <div class="hero-unit">
         <h1>Hello</h1>
@@ -106,6 +110,8 @@
             to a movie. Doesn't that sound cool?</p>
 
         <p><a ng-click="go('start')" class="btn btn-primary btn-large">Click to start &raquo;</a></p>
+
+        <p><a ng-click="go('about')" class="btn btn-primary btn-large">More info</a></p>
     </div>
 </script>
 
