--- a/src/index.html
+++ b/src/index.html
@@ -59,7 +59,7 @@
                     <span class="caret"></span>
                 </a>
                 <ul class="dropdown-menu">
-                    <li><a href="javascript:;" ng-click="toggleSandbox()">{{model.sandbox}} sandbox mode</a></li>
+                    <li><a href="javascript:;" ng-click="toggleSandbox()">{{model.sandbox|EnableDisable}} sandbox mode</a></li>
                     <li><a href="#" data-toggle="modal" data-target="#shutdownmodel">Shutdown</a></li>
                 </ul>
             </div>
