--- a/src/index.html
+++ b/src/index.html
@@ -81,7 +81,9 @@
 
         <p class="text-center">
             <a ng-click="go('about')" class="btn btn-link">
-                Click for readme.md</a></p>
+                Click for readme.md</a><a href="https://github.com/ziaxdk/zlapser" target="_blank" class="btn btn-link">View on Github</a>
+
+        </p>
     </div>
 </script>
 
