--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta name="google-site-verification" content="0YWTY9dt35x5glLsct0gi5RwI_rRPULqGO-6DH7k6Fg" />
+    <meta name="google-site-verification" content="0YWTY9dt35x5glLsct0gi5RwI_rRPULqGO-6DH7k6Fg"/>
     <title>Zlapser</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="css/bootstrap.min.css" rel="stylesheet">
@@ -52,22 +52,6 @@
     </div>
 </div>
 
-<div class="modal hide fade" id="notpimodel">
-    <div class="modal-header">
-        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h3>Cannot do</h3>
-    </div>
-    <div class="modal-body">
-        <p>The next step is actually to start the zlapsing, but this is not running on a pi..</p>
-    </div>
-    <div class="modal-footer">
-        <button class="btn" data-dismiss="modal" aria-hidden="true">Close</button>
-    </div>
-</div>
-
-<script type="text/ng-template" id="about.tmpl">
-
-</script>
 
 <script type="text/ng-template" id="html.tmpl">
     <div class="hero-unit">
@@ -82,7 +66,8 @@
 
         <p class="text-center">
             <a ng-click="go('about')" class="btn btn-link">
-                Click for readme.md</a><a href="https://github.com/ziaxdk/zlapser" target="_blank" class="btn btn-link">View on Github</a>
+                Click for readme.md</a><a href="https://github.com/ziaxdk/zlapser" target="_blank" class="btn btn-link">View
+            on Github</a>
 
         </p>
     </div>
@@ -192,6 +177,9 @@
             <dt>Job should end</dt>
             <dd>{{job.time.end|date:'medium'}}</dd>
         </dl>
+        <div class="text-center"><i class="icon-camera icon-4x text-center" ng-style="{color: color}"></i>
+        </div>
+
     </div>
 
     <div class="progress">
