--- a/src/index.html
+++ b/src/index.html
@@ -70,6 +70,13 @@
             on Github</a>
 
         </p>
+
+        <div class="text-center">
+            <iframe width="420" height="315" src="http://www.youtube.com/embed/-89zWoQHKok" frameborder="0"
+                    allowfullscreen></iframe>
+            <h5>250 frame / 10 final / 25fps / ffmpeg -r 25 -i img_%04d.jpg -vcodec libx264 movie.mp4</h5>
+
+        </div>
     </div>
 </script>
 
