--- a/src/index.html
+++ b/src/index.html
@@ -4,6 +4,12 @@
     <meta name="google-site-verification" content="0YWTY9dt35x5glLsct0gi5RwI_rRPULqGO-6DH7k6Fg"/>
     <title>Zlapser</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:type" content="article" />
+    <meta property="og:site_name" content="www.zlapser.net" />
+    <meta property="og:url" content="http://www.zlapser.net" />
+    <meta property="og:title" content="Home made timelapse module for your camera" />
+    <meta property="og:description" content="Use your DSLR and Rasperry Pi to build a time lapser module" />
+    <meta property="og:video" content="http://www.youtube.com/watch?v=-89zWoQHKok" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
