--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:og="http://ogp.me/ns#" lang="en">
 <head>
     <meta name="google-site-verification" content="0YWTY9dt35x5glLsct0gi5RwI_rRPULqGO-6DH7k6Fg"/>
     <title>Zlapser</title>
