--- a/src/index.html
+++ b/src/index.html
@@ -9,7 +9,7 @@
     <meta property="og:url" content="http://www.zlapser.net" />
     <meta property="og:title" content="Home made timelapse module for your camera" />
     <meta property="og:description" content="Use your DSLR and Rasperry Pi to build a time lapser module" />
-    <meta property="og:image" content="http://www.zlapser.net/img/screen.jpg" />
+    <meta property="og:image" content="http://www.zlapser.net/img/screen2.jpg" />
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
