--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html xmlns:og="http://ogp.me/ns#" lang="en">
 <head>
     <meta name="google-site-verification" content="0YWTY9dt35x5glLsct0gi5RwI_rRPULqGO-6DH7k6Fg"/>
-    <title>Zlapser</title>
+    <title>Zlapser - Control your DSLR with your Rasperry Pi</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta property="og:type" content="article"/>
     <meta property="og:site_name" content="www.zlapser.net"/>
@@ -10,6 +10,7 @@
     <meta property="og:title" content="Home made timelapse module for your camera"/>
     <meta property="og:description" content="Use your DSLR and Rasperry Pi to build a time lapser module"/>
     <meta property="og:image" content="http://www.zlapser.net/img/screen2.jpg"/>
+    <meta property="description" content="Use your DSLR and Rasperry Pi to build a time lapser module"/>
     <link href="css/bootstrap.min.css" rel="stylesheet">
     <link href="css/font-awesome.min.css" rel="stylesheet">
     <link href="css/app.css" rel="stylesheet">
