--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
                                                                                               class="icon-spinner icon-spin"></i>
         </p>
 
-        <div class="alert alert-error" ng-hide="!job.isPi">
+        <div class="alert alert-error" ng-hide="job.isPi">
             <button type="button" class="close" data-dismiss="alert">&times;</button>
             <strong>Ups!</strong> This can only be runned on a Rasperry pi
         </div>
